FIX sortable graphic issues, Better layout disposition on standard-form-body and standard-form-sidebar, FIX repeaters issue with collapse feature

--- a/app/assets/stylesheets/binda/components/fileupload.scss
+++ b/app/assets/stylesheets/binda/components/fileupload.scss
@@ -125,4 +125,5 @@
 {
   pointer-events: none;
   opacity: 0;
+  width: 0; // Odd but needed, otherwise it occupies few transparent pixels...
 }
