--- a/app/assets/stylesheets/binda/components/sortable.scss
+++ b/app/assets/stylesheets/binda/components/sortable.scss
@@ -44,12 +44,12 @@ ul.sortable > li > *
 
 .sortable-handle
 {
+  // display: block;
   width: 12px;
   height: 12px;
   margin-right: 16px;
   margin-left: 8px;
   border-radius: 6px;
-  background-color: #ccc;
 }
 
 .ui-sortable-handle
@@ -58,6 +58,7 @@ ul.sortable > li > *
   {
     z-index: 10 !important;
     transform: scale(1.01);
+    background-color: $color-gray-lightest;
     box-shadow: 0 10px 26px 0 rgba(0,0,0,.25);
   }
 }
